<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.husky.test.integration</groupId>
	<artifactId>husky-integration-tests</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<java.version>17</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<husky.version>3.0.1-SNAPSHOT</husky.version>
		<spring.version>6.1.13</spring.version>
		<spring.boot.version>3.3.4</spring.boot.version>
		<camel.version>4.8.0</camel.version>
		<junit.version>5.10.1</junit.version>
		<ipf.version>5.0-m3</ipf.version>
		<maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
		<org.hl7.fhir.version>6.3.23</org.hl7.fhir.version>
		<tomcat.embed.version>10.1.31</tomcat.embed.version>
	</properties>
	<repositories>
		<!--
		<repository>
			<id>husky-releases</id>
			<name>husky-releases</name>
			<url>https://archiva.et-innovations.org/repository/internal/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
				-->
		<repository>
			<id>husky-snapshots</id>
			<name>husky-snapshots</name>
			<url>https://archiva.et-innovations.org/repository/snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>

	</repositories>
	<scm>
		<connection>
			scm:git:https://github.com/project-husky/husky-integration-tests.git</connection>
		<developerConnection>
			scm:git:git@github.com:project-husky/husky-integration-tests.git</developerConnection>
		<url>
			https://github.com/project-husky/husky-integration-tests/tree/master</url>
		<tag>HEAD</tag>
	</scm>
	<!--
	<distributionManagement>
		<snapshotRepository>
			<id>husky-snapshots</id>
			<name>husky-snapshots</name>
			<url>https://archiva.et-innovations.org/repository/snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>husky-releases</id>
			<name>husky-releases</name>
			<url>https://archiva.et-innovations.org/repository/internal/</url>
		</repository>
		
	</distributionManagement>
	-->
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.projecthusky.communication</groupId>
				<artifactId>husky-communication-ch</artifactId>
				<version>${husky.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projecthusky.communication</groupId>
				<artifactId>husky-ppq</artifactId>
				<version>${husky.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projecthusky.communication</groupId>
				<artifactId>husky-valueset-gen</artifactId>
				<version>${husky.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projecthusky.communication</groupId>
				<artifactId>husky-xua-gen-impl</artifactId>
				<version>${husky.version}</version>
			</dependency>

			<dependency>
				<groupId>org.projecthusky.communication</groupId>
				<artifactId>husky-service</artifactId>
				<version>${husky.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.maven.surefire</groupId>
				<artifactId>surefire-junit-platform</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-suite</artifactId>
				<version>1.10.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-properties-migrator</artifactId>
				<version>${spring.boot.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
				<version>${spring.boot.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-core</artifactId>
				<version>4.0.5</version>
				<scope>test</scope>
			</dependency>
			<!-- Apache Camel section	-->
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-base</artifactId>
				<version>${camel.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-main</artifactId>
				<version>${camel.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-support</artifactId>
				<version>${camel.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-spring-xml</artifactId>
				<version>${camel.version}</version>
			</dependency>

			<dependency>
				<groupId>com.sun.xml.messaging.saaj</groupId>
				<artifactId>saaj-impl</artifactId>
				<version>3.0.4</version>
			</dependency>
			<!-- Jakarta section -->
			<dependency>
				<groupId>jakarta.xml.ws</groupId>
				<artifactId>jakarta.xml.ws-api</artifactId>
				<version>4.0.2</version>
			</dependency>
			<!--	Tomcat Embed section -->
			<dependency>
				<groupId>org.apache.tomcat.embed</groupId>
				<artifactId>tomcat-embed-core</artifactId>
				<version>${tomcat.embed.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tomcat.embed</groupId>
				<artifactId>tomcat-embed-el</artifactId>
				<version>${tomcat.embed.version}</version>
			</dependency>
			<!-- Hapi Fhir section -->
			<dependency>
				<groupId>ca.uhn.hapi.fhir</groupId>
				<artifactId>org.hl7.fhir.convertors</artifactId>
				<version>${org.hl7.fhir.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.uhn.hapi.fhir</groupId>
				<artifactId>org.hl7.fhir.dstu2</artifactId>
				<version>${org.hl7.fhir.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.uhn.hapi.fhir</groupId>
				<artifactId>org.hl7.fhir.dstu3</artifactId>
				<version>${org.hl7.fhir.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.uhn.hapi.fhir</groupId>
				<artifactId>org.hl7.fhir.r4b</artifactId>
				<version>${org.hl7.fhir.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.uhn.hapi.fhir</groupId>
				<artifactId>org.hl7.fhir.r5</artifactId>
				<version>${org.hl7.fhir.version}</version>
			</dependency>
			<dependency>
				<groupId>ca.uhn.hapi.fhir</groupId>
				<artifactId>org.hl7.fhir.validation</artifactId>
				<version>${org.hl7.fhir.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.projecthusky.communication</groupId>
			<artifactId>husky-communication-ch</artifactId>
			<version>${husky.version}</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
				<!-- Excluded not used dependency	-->
				<exclusion>
					<groupId>org.apache.tomcat.embed</groupId>
					<artifactId>tomcat-embed-websocket</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.projecthusky.communication</groupId>
			<artifactId>husky-ppq</artifactId>
			<version>${husky.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projecthusky.communication</groupId>
			<artifactId>husky-valueset-gen</artifactId>
			<version>${husky.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projecthusky.communication</groupId>
			<artifactId>husky-xua-gen-impl</artifactId>
			<version>${husky.version}</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.projecthusky.communication</groupId>
			<artifactId>husky-service</artifactId>
			<version>${husky.version}</version>
		</dependency>

		<dependency>
				<groupId>com.sun.xml.messaging.saaj</groupId>
				<artifactId>saaj-impl</artifactId>
			</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-core</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<executions>
					<execution>
						<id>test-junit5</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit-platform</artifactId>
						<version>${maven-surefire-plugin.version}</version>
					</dependency>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>jks</nonFilteredFileExtension>
						<nonFilteredFileExtension>pdf</nonFilteredFileExtension>
						<nonFilteredFileExtension>zip</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
